--- a/DreamScaper/index.html
+++ b/DreamScaper/index.html
@@ -20,24 +20,23 @@
       .animate-fade-in-up { animation: fade-in-up 0.6s ease-out forwards; }
       .animate-fade-in { animation: opacity 0.5s ease-out forwards; }
     </style>
-    <script type="importmap">
+  <script type="importmap">
 {
   "imports": {
-    "react": "https://esm.sh/react@19.0.0",
-    "react-dom": "https://esm.sh/react-dom@19.0.0",
-    "react-dom/client": "https://esm.sh/react-dom@19.0.0/client",
-    "@google/genai": "https://esm.sh/@google/genai@1.30.0",
-    "lucide-react": "https://esm.sh/lucide-react@0.468.0?external=react",
+    "react": "https://esm.sh/react@^19.2.3",
     "react-dom/": "https://esm.sh/react-dom@^19.2.3/",
-    "react/": "https://esm.sh/react@^19.2.3/"
+    "react/": "https://esm.sh/react@^19.2.3/",
+    "lucide-react": "https://esm.sh/lucide-react@^0.562.0",
+    "@google/genai": "https://esm.sh/@google/genai@^1.34.0",
+    "@vitejs/plugin-react": "https://esm.sh/@vitejs/plugin-react@^5.1.2",
+    "vite": "https://esm.sh/vite@^7.3.0"
   }
 }
 </script>
-  </head>
+</head>
   <body class="bg-slate-50 text-slate-900 antialiased">
     <div id="root"></div>
-    <script type="module" src="./index.tsx"></script>
+    <!-- Vite will automatically handle the TSX transformation here -->
+    <script type="module" src="/index.tsx"></script>
   </body>
 </html>
-
-
