--- a/DreamScaper/index.html
+++ b/DreamScaper/index.html
@@ -1,12 +1,18 @@
-
 <!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>DreamScapers | Pro AI Landscaping</title>
+
+    <!-- Tailwind CDN is OK for now -->
     <script src="https://cdn.tailwindcss.com"></script>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800;900&display=swap" rel="stylesheet">
+
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800;900&display=swap"
+      rel="stylesheet"
+    />
+
     <style>
       body { font-family: 'Inter', sans-serif; }
       ::-webkit-scrollbar { width: 8px; }
@@ -20,23 +26,12 @@
       .animate-fade-in-up { animation: fade-in-up 0.6s ease-out forwards; }
       .animate-fade-in { animation: opacity 0.5s ease-out forwards; }
     </style>
-  <script type="importmap">
-{
-  "imports": {
-    "react": "https://esm.sh/react@^19.2.3",
-    "react-dom/": "https://esm.sh/react-dom@^19.2.3/",
-    "react/": "https://esm.sh/react@^19.2.3/",
-    "@google/genai": "https://esm.sh/@google/genai@^1.34.0",
-    "lucide-react": "https://esm.sh/lucide-react@^0.562.0",
-    "vite": "https://esm.sh/vite@^7.3.0",
-    "@vitejs/plugin-react": "https://esm.sh/@vitejs/plugin-react@^5.1.2"
-  }
-}
-</script>
-</head>
+  </head>
+
   <body class="bg-slate-50 text-slate-900 antialiased">
     <div id="root"></div>
-    <!-- Vite handles this entry point and transpiles it to browser-ready JavaScript -->
-    <script type="module" src="/index.tsx"></script>
+
+    <!-- Vite entry point -->
+    <script type="module" src="/src/index.tsx"></script>
   </body>
 </html>
