--- a/DreamScaper/index.html
+++ b/DreamScaper/index.html
@@ -32,6 +32,7 @@
     <div id="root"></div>
 
     <!-- Vite entry point -->
-    <script type="module" src="/src/index.tsx"></script>
+   <script type="module" src="/index.tsx"></script>
   </body>
 </html>
+
