--- a/DreamScaper/index.html
+++ b/DreamScaper/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>DreamScapers | Pro AI Landscaping</title>
 
-    <!-- Tailwind CDN is OK for now -->
+    <!-- Tailwind CDN for rapid styling -->
     <script src="https://cdn.tailwindcss.com"></script>
 
     <link
@@ -26,13 +26,25 @@
       .animate-fade-in-up { animation: fade-in-up 0.6s ease-out forwards; }
       .animate-fade-in { animation: opacity 0.5s ease-out forwards; }
     </style>
-  </head>
+  <script type="importmap">
+{
+  "imports": {
+    "react": "https://esm.sh/react@^19.2.3",
+    "react-dom/": "https://esm.sh/react-dom@^19.2.3/",
+    "react/": "https://esm.sh/react@^19.2.3/",
+    "@google/genai": "https://esm.sh/@google/genai@^1.34.0",
+    "lucide-react": "https://esm.sh/lucide-react@^0.562.0",
+    "vite": "https://esm.sh/vite@^7.3.0",
+    "@vitejs/plugin-react": "https://esm.sh/@vitejs/plugin-react@^5.1.2"
+  }
+}
+</script>
+</head>
 
   <body class="bg-slate-50 text-slate-900 antialiased">
     <div id="root"></div>
 
     <!-- Vite entry point -->
-   <script type="module" src="/index.tsx"></script>
+    <script type="module" src="/index.tsx"></script>
   </body>
 </html>
-
